plugins {
    id "org.jetbrains.intellij" version "1.13.2"
    id "java"
}

def v = "1.0.7"

group "com.joker"
version v

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    options.encoding = "UTF-8"
    options.warnings = false
}

patchPluginXml {
    version = v
    sinceBuild = "201"
    untilBuild = "232.*"
}

repositories {
    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
    maven { url "https://maven.aliyun.com/repository/central" }
    maven { url "https://maven.aliyun.com/repository/public" }
    maven { url "https://maven.aliyun.com/repository/google" }
    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
    maven { url "https://plugins.gradle.org/m2/" }
}

// Configure Gradle IntelliJ Plugin
// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
intellij {
    plugins = ["com.intellij.java"]
    version = "2022.2.4"
    type = "IU"
    downloadSources = true
    updateSinceUntilBuild = false
}

test {
    useJUnitPlatform()
}

dependencies {
}

runIde {
    jvmArgs "--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED", "-Dfile.encoding=utf-8"
}